--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -15,11 +15,12 @@ services:
     build:
       context: ./cms
       dockerfile: Dockerfile.dev
+    platform: linux/arm64/v8
     container_name: lyr_cms
     depends_on:
       - db
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:1337"]
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:1337/admin', r => process.exit(r.statusCode < 400 ? 0 : 1)).on('error', () => process.exit(1))"]
       interval: 10s
       timeout: 5s
       retries: 12
@@ -31,6 +32,7 @@ services:
       DATABASE_NAME: ${POSTGRES_DB:-strapi}
       DATABASE_USERNAME: ${POSTGRES_USER:-strapi}
       DATABASE_PASSWORD: ${POSTGRES_PASSWORD:-strapi}
+      DATABASE_SSL: 'false'
       APP_KEYS: ${APP_KEYS}
       API_TOKEN_SALT: ${API_TOKEN_SALT}
       ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
@@ -38,11 +40,12 @@ services:
       NODE_ENV: development
       HOST: ${STRAPI_HOST:-0.0.0.0}
       PORT: ${STRAPI_PORT:-1337}
+      STRAPI_TELEMETRY_DISABLED: '1'
+      CI: '1'
     ports:
       - "1337:1337"
     volumes:
       - cms-data:/srv/app
-      - ./cms/src:/srv/app/src
       - cms-uploads:/srv/app/public/uploads
 
   web:
@@ -58,11 +61,14 @@ services:
       NEXT_PUBLIC_CMS_URL: http://localhost:1337
       CMS_INTERNAL_URL: http://cms:1337
       NEXT_PUBLIC_SITE_NAME: ${NEXT_PUBLIC_SITE_NAME:-LYR}
+      NEXT_PUBLIC_SITE_URL: ${NEXT_PUBLIC_SITE_URL:-http://localhost:3000}
+      NEXT_PUBLIC_ANALYTICS_DOMAIN: ${NEXT_PUBLIC_ANALYTICS_DOMAIN:-}
       STRAPI_API_TOKEN: ${STRAPI_API_TOKEN:-}
       OPENAI_API_KEY: ${OPENAI_API_KEY:-}
       OPENAI_MODEL: ${OPENAI_MODEL:-gpt-4o-mini}
     ports:
       - "3000:3000"
+    command: sh -c "npm run dev -- -H 0.0.0.0"
     volumes:
       - ./web:/app
       - /app/node_modules
